@@ -5,15 +5,12 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# PE 2017.3     5.3      2.4.5  2018-12-31
+# SIMP 6.3      5.5      2.4.5  TBD***
+# PE 2018.1     5.5      2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -38,19 +35,17 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
-  - gem install -v '~> 1.16' bundler
+  - for x in ${HOME}/.rvm/gems/*; do gem uninstall -I -x -i "${x}" -v '>= 1.17' bundler || true; gem uninstall -I -x -i "${x}@global" -v '>= 1.17' bundler || true; done
+  - gem install -v '~> 1.17' bundler
 
 global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
+      rvm: 2.4.5
       env: PUPPET_VERSION="~> 5"
       script:
         - bundle exec rake check:dot_underscore
@@ -63,21 +58,14 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
       name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
+      rvm: 2.4.5
       env: PUPPET_VERSION="~> 5.3.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.4.4
+      rvm: 2.4.5
       name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
       env: PUPPET_VERSION="~> 5.5.0"
       script:
@@ -85,30 +73,29 @@ jobs:
 
     - stage: spec
       name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
+      rvm: 2.4.5
       env: PUPPET_VERSION="~> 5.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
       env: PUPPET_VERSION="~> 6.0"
       script:
         - bundle exec rake spec
 
     - stage: deploy
-      rvm: 2.4.1
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
         - "export PUPMOD_METADATA_VERSION=`ruby -r json -e \"puts JSON.parse(File.read('metadata.json')).fetch('version')\"`"
         - '[[ $TRAVIS_TAG =~ ^simp-${PUPMOD_METADATA_VERSION}$|^${PUPMOD_METADATA_VERSION}$ ]]'
-
       deploy:
         - provider: releases
           api_key:
-            secure: "eDhScma346Dr2mNY8G6SOzBixiilz94dKzESJByaRrgbrKel2yWJcQIvnPQEj1BkDEreg9ZI1arxIj8kYcZ9grvET9+ctEOn5sOgFyYNZr4Tu3b1vWA3hMaPTO0vyEoZT7xIKRKwWQ5TTkE3bKvXYMVl82cobtgpGpeenkbwMAEpcRaZSs6aYbpcusyjrAnTn6tVwF4WYxaP3+8k/ezKC3jOZFc3kRSqU3xcwwwDWZplCEXRsr0eGnUl/H3+GtXUJp9S6k9IKvp3CQllcZdn7ZT5AjQVFovLPcWD/v4DXIZaaUK/jiH+dUuDquPRMYQh3UiDn6WjNeJXgd8wZtnaywg8SUIZszz+tyitNmUaAU9e6cm56SFbiB8OEyulo2yKOnIP+QDpxogi/OboG5nM7nn4oTStZ7JGuACLtUhshzsY0FMekuqICwU8FE5oays/vPjn8VVnSxcY3avLmIOd0i3yrQW0/cCLSFaHiOEJyiPZ/XmWZowck9+txIDeRMXcxpaXWEnA2c5mbheAYzbxZPwrmuomjYIrm+NTA/kAF/HN1aNNAj0A+1xpc97Wcj2PuoCOP/3E8s2I/wSCjiVtRtRszcNNHP8E30aS9Qlm2ZAvkKWz49091BbO8d26ywuuKy/cVT5p87PzR+HtoyihiwTfzzAPrCogBAir2SiIUuc="
+            secure: "k9Nx0/6V6FEOzYPhsn8410ZGA7mcYc/H1vR+YH02yDhKLRILI1XWZ8vjXobvY+1bdnhbUj8O8gUjaZv7PIztaRzRqu2FeTJb9R3fFhXpt2Uv9ZY+5Hq+LoOpEj8LaXCtVHlss8EVxU7dXg96NxrMenUeB5WPDrJdQu+lEkcvmNNysCLljmLda9MlGTBlsdpugMsM6b+k6LIF64hovup4ewQSoHq3RxciHN3rjn/K8e7oY3tclD+rISUZOTeLr+fjS3LhAW2R5u+0FjuzIE/Gcq/szuQC5N2CAegVt8H6q7DRjkklVI0L6FXCoAd0t6CHwZ+PlftphAqh4FjYrtTOaUirPpsKWMLfHSWANXneVZ8uhqDiMTNLMYnOewZrTyyLqIh/d7xbEcv6uQuCdbSoWmupZfkXAKvoecMA3+3y4dVJmf/olqlz4KSE7UMKettG/RogtSIZ6YDhfuWiI6P29NZDjzhKHLmmPxl4upaiEVt6XoxDeh2fqKpe3ggURIcG7xv7CbzCmhYz4EZ4a4rd6ieUvjrpGLshke0O3PZBHYXA84fnWiUb5tQCGAX0pE0sJmGqnufHeMzBOi7JDBp8XLZAjEFcIjjn+3Tb9whZh+gw5RVUH768fp2gH+STJKNGfz9ClXyKJkEFb2ZmYboKZ7WptnFMM6TmcC2O4RYT4Yo="
           skip_cleanup: true
           on:
             tags: true
@@ -116,8 +103,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "5wLCXHhjz22+dleanz2b81Zf3Ki+RTYmeV9AarD1lXWIukaYbt0Vjhn2n3OTqecl2vb1+BYxbL+KS0HSndT5u+LYhicYeGb7zmY6saEu7PUisKbAJUcLvHqCQJ1RZxaoUieMotSJVsIIqky1ejfTiIgcfDQXGqUz3StPVDKb+3f54VeFz6ED50qFVPUG80Ei0ZeIRNXZJCRZIjusYt5zIKBDMctc3bnRcsbeE/iintG5yJA0tiCo9dK3PA2mMsc5gGPWpKKJBMIjgk+9Pb8qhkyRjDHmVUt6b1qx2YvCyMxfb2KtmuS9SJq0pZl+Z+5JtTcbiwPDjUvlSpD1dS4ko8ns+aATQ5s0JGZEPYUpsvppJN0PFgtBT9lqB/7x8HVHapphaXs7NkfUXdcZW6IbspS9Jru3Zpwv2cFPiZ6S/0Wxk5Vl1u0dTTlgYjuydPOazddjwxnuBOHCymi3Wb0Vcf+wUz5axPwksoVs1wgShvNVYKbbec8JFFwIXtSQxfeq3rAIPYJFkfIOYfx43Mr3bofyYEZTWhaoLpJRBhiFCD0xzN0cbM6wFzUNMQeZAlJjw2dZ4tLRYMsD4HmzhqDxC/Phld5UfOhRM4AKFnA5l7npu8XP+KqVJwtezKKa2j42koxXnx3RpMnp32W3/YjR5XgXR9P5H1ZhMH6hV1K1AT8="
+            secure: "bweemJAHZQN8lEEDRqR5JPyyd4+5rgzqWvKfUHsynEtzuwlE2xesQ7MUpqS9O+qOQaltFyjLzjqVvaDhAivxL8hzJPTChBqT26fCCSw5eE36bpZPlXvru8BaThjjEDvgGqZAjSDKOuS8rLwgwRMD6ZiBVHZ7XEQADAEtWtBsV9LsoUJYU6noTTxkGG4MHya5I6erW9GUbyJ90UIvtMSyjQ5pLCirCOgsNUD/RF0wNl8jukAuQbQRRT+LGBNENS3PnvLCk52AeizUpR15bMcrgPv0338WnRfGufz+itRlx4ZU0899COFpuPSBmuLP4WQp1mTRVGa6cMFWzA19yhjzhOX68Pyv/hBgFzlsdsqjLK7XvE9Ux2KravAnCe833K5b6i6kcok5+KDrdjQxvyh0TGBIA+75sLx8VViKTjXqxf2OEL5W1VEgmhxQPCkFh38oBvE1rkcFLexoFVyAU+Jblu6yPrw3fuUUMLGalEkYjyHLqUYU7x+Kd6NotDrQ7OxfVWbfrBwpDC9xn/wVKASs3kkcHzYfc6y1xzpJ5Xlod2nTa+FXo7q2yECUgnjGVu680t/wCDydOY4GtsaDRRbgi5qrIm5I7Ie42sA2fQOmkix/XFIcm/EUsdTx71OllfdWOVteoa+4JiWSVgskm0PG9JEHiVwtScxr26jzVO6UaII="
           on:
             tags: true
-            rvm: 2.4.1
             condition: '($SKIP_FORGE_PUBLISH != true)'
